--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2023년 버킷리스트</title>
+    <title>두이의 2023년 버킷리스트</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@400;500;600;700&display=swap');
         * {
@@ -49,15 +49,11 @@
 </head>
 
 <body class="bg center">
-    <h1 class="title">2023 신년계획</h1>
-    <p class="msg">올해는 꼭 모두 지키자!</p>
+    <h1 class="title">두이의 2023 신년계획</h1>
+    <p class="msg">음악에 초 집중하자</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center">매일 코딩 강의 듣기</div>
-        <div class="bucket img2-t2 center">운동하기</div>
-        <div class="bucket img2-t2 center">승제쌤 강의 완강하기</div>
-        <div class="bucket img1-t2 center">화학 강의 완강하기</div>
-        <div class="bucket img1-t2 center">나만의 게임 만들기</div>
-        <div class="bucket img2-t2 center">상반기 돈 600 모으기</div>
+        <div class="bucket img1-t2 center">해외여행 가기</div>
+        <div class="bucket img2-t2 center">화이팅!</div>
     </div>
 
 </body>
