--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <p class="msg">음악에 초 집중하자</p>
     <div class="row flex-row wrap">
         <div class="bucket img1-t2 center">해외여행 가기</div>
-        <div class="bucket img2-t2 center">화이팅!</div>
+        <div class="bucket img2-t2 center">최고 멋지게 데뷔하기</div>
     </div>
 
 </body>
